# TFM

./: .gitignore  README.md
Explanations/: README.md  pyproject.toml
Explanations/data/mappings/: causal_properties.txt
Explanations/data/ontologies/: MLO.owl  MLO.ttl
Explanations/results/c0/medicine_lost/: 20260204_200345.jsonl  20260204_200345_meta.json  20260205_025245.jsonl  20260205_025245_meta.json
Explanations/results/c1/medicine_lost/: 20260204_233843.jsonl  20260204_233843_meta.json  20260205_024854.jsonl  20260205_024854_meta.json  c1_debug_prompt.txt
Explanations/results/c2/medicine_lost/: 20260205_013420.jsonl  20260205_013420_meta.json  20260205_021500.jsonl  20260205_021500_meta.json  20260205_034553_meta.json
Explanations/results/c3/medicine_lost/: 20260205_034533_meta.json  20260205_034647_meta.json  20260205_035712_meta.json  20260205_035719_meta.json  20260205_035826.jsonl  20260205_035826_meta.json  20260205_043550.jsonl  20260205_043550_meta.json  20260205_045316.jsonl  20260205_045316_meta.json  20260205_050238.jsonl  20260205_050238_meta.json  20260205_053609.jsonl  20260205_053609_meta.json  (+9 more)
Explanations/scripts/: debug_c1_inputs.py  run_c0.py  run_c1.py  run_c2.py  run_c3.py  smoke_test_c0.py  smoke_test_llm.py
Explanations/src/experiments/: runner.py
Explanations/src/hypotheses/: c0.py  c1.py  c2.py  c3.py
Explanations/src/llm/: client.py
Explanations/src/scenarios/: medicine_lost.py  nominal.py
Explanations/src/utils/: known_entities.py  tbox_vocab.py
Explanations/src/validator/: causal_validator.py  runtime.py
(+13 files in other folders)
